Comply with nextCursor in payload
